--- a/proyek-akhir cuaca/src/templates/index.html
+++ b/proyek-akhir cuaca/src/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cuaca</title>
+  <title>CuacaKu</title>
 </head>
 <body>
   <a tabindex="1" href="#content-id" class="skip-to-content">To the Content</a>
@@ -11,7 +11,7 @@
     <div id="navbar-id" class="navbar">
       <div class="header-inner">
         <h1 class="header-title">
-          Cuaca
+          CuacaKu
         </h1>
         <ul class="navigation-responsive">
           <button id="navigation-drawer-id" class="navigation-drawer" href="#">☰</button>
@@ -27,7 +27,7 @@
     </div>
     <div class="hero">
       <div class="hero-container">
-        <h1 class="hero-title">Cuaca</h1>
+        <h1 class="hero-title">CuacaKu</h1>
         <p class="hero-description">Temukan Kondisi Cuaca di Kotamu</p>
       </div>
     </div>
