--- a/proyek-akhir cuaca/src/styles/main-responsive.css
+++ b/proyek-akhir cuaca/src/styles/main-responsive.css
@@ -52,6 +52,10 @@
 }
 
 @media screen and (min-width: 701px) {
+    .search-container{
+        width: 800px;
+    }
+
     .navigation-responsive {
         display: none;
     }
