--- a/proyek-akhir cuaca/src/styles/main.css
+++ b/proyek-akhir cuaca/src/styles/main.css
@@ -15,12 +15,6 @@ body {
   
 }
 
-main {
-  width: 90%;
-  max-width: 800px;
-  margin: 32px auto;
-
-}
 
 /*skip to content btn*/
 .skip-to-content {
@@ -169,6 +163,12 @@ header .hero .hero-container .hero-description {
 main {
   width: 100%;
   margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 main .content-header {
@@ -198,4 +198,42 @@ footer {
   text-align: center;
   padding: 20px;
   font-weight: 700;
+}
+
+/*loading*/
+.lds-facebook {
+  display: none ;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: #fff;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
 }
