--- a/proyek-akhir cuaca/src/templates/index.html
+++ b/proyek-akhir cuaca/src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="icon.svg">
   <title>CuacaKu</title>
 </head>
 <body>
@@ -10,9 +11,7 @@
   <header>
     <div id="navbar-id" class="navbar">
       <div class="header-inner">
-        <h1 class="header-title">
-          CuacaKu
-        </h1>
+        <img src="img/logo-cuaca.png" class="header-logo">
         <ul class="navigation-responsive">
           <button id="navigation-drawer-id" class="navigation-drawer" href="#">☰</button>
         </ul>
@@ -21,7 +20,7 @@
         <ul class="navbar-list">
           <li class="navbar-item"><a href="#">Home</a></li>
           <li class="navbar-item"><a href="#/article">Article</a></li>
-          <li class="navbar-item"><a href="#/aboutus">About Us</a></li>
+          <li class="navbar-item"><a href="#/aboutus">About</a></li>
         </ul>
       </nav>
     </div>
@@ -32,7 +31,7 @@
       </div>
     </div>
   </header>
-  <main id="content-id" class="content">
+  <main id="content-id" class="content" style="min-height: calc(100vh - 380px);">
     <p>Temukan Cuaca Di Lokasimu</p>
     
   </main>
