--- a/proyek-akhir cuaca/src/styles/main-responsive.css
+++ b/proyek-akhir cuaca/src/styles/main-responsive.css
@@ -1,4 +1,8 @@
 @media screen and (max-width: 700px) {
+    header .navbar {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
     .header-title {
         display: flex;
         padding-left: 10px;
@@ -11,6 +15,11 @@
         margin-top: 0px;
         color: white;
         text-decoration: none;
+    }
+
+    header .navbar .navbar-container {
+        display: flex;
+        justify-content: space-evenly;
     }
 
     .navbar-container {
@@ -46,8 +55,80 @@
     .header-inner {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 0px 30px;
+        gap: 10rem;
         margin-top: 0;
+    }
+
+}
+
+@media screen and (min-width: 280px) {
+    .posts {
+        grid-template-columns: auto;
+        display: grid;
+    }
+
+    .article-main {
+        max-width: 275px;
+    }
+
+    .latest {
+        max-width: 275px;
+    }
+
+    .headline{
+        max-width: 275px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .post-item {
+        width: 255px;
+    }
+
+    .content{
+        padding: 32px 0;
+    }
+
+    .headline__figure {
+        width: 275px;
+    }
+
+    .headline__content {
+        width: 275px;
+    }
+
+}
+
+@media screen and (min-width: 500px) {
+    .article-main {
+        max-width: 400px;
+    }
+
+    .latest {
+        max-width: 400px;
+    }
+
+    .headline{
+        max-width: 400px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .post-item {
+        width: 300px;
+    }
+
+    .content{
+        padding: 32px;
+    }
+
+    .headline__figure {
+        width: 350px;
+    }
+
+    .headline__content {
+        width: 350px;
     }
 }
 
@@ -58,5 +139,113 @@
 
     .navigation-responsive {
         display: none;
+    }
+
+    .headline{
+        max-width: 600px;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .headline__figure {
+        width: 450px;
+    }
+
+    .headline__content {
+        width: 600px;
+    }
+
+    .latest {
+        max-width: 600px;
+    }
+
+    .article-main {
+        max-width: 600px;
+    }
+
+    .post-item {
+        width: 500px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .article-main {
+        max-width: 700px;
+    }
+
+    .latest {
+        max-width: 700px;
+    }
+
+    .headline{
+        max-width: 700px;
+    }
+
+    .post-item {
+        width: 600px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .article-main {
+        max-width: 900px;
+    }
+
+    .latest {
+        max-width: 900px;
+    }
+
+    .posts {
+        grid-template-columns: auto auto;
+        display: grid;
+    }
+
+    .headline{
+        max-width: 900px;
+    }
+
+    .post-item {
+        width: 400px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .article-main {
+        max-width: 1100px;
+    }
+
+    .latest {
+        max-width: 1100px;
+    }
+
+    .posts {
+        grid-template-columns: auto auto;
+        display: grid;
+    }
+    .headline{
+        max-width: 1100px;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .article-main {
+        max-width: 1200px;
+    }
+
+    .latest {
+        max-width: 1200px;
+    }
+
+    .posts {
+        grid-template-columns: auto auto auto;
+        display: grid;
+    }
+
+    .post-item {
+        width: 300px;
+    }
+
+    .headline{
+        max-width: 1300px;
     }
 }
