--- a/proyek-akhir cuaca/src/styles/main.css
+++ b/proyek-akhir cuaca/src/styles/main.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: sans-serif;
-  background-color: #334257;
+  background-color: #ebebeb;
   
 }
 
@@ -46,17 +46,22 @@ header .navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  
   z-index: 999;
   transition: background-color 0.5s ease-in-out;
+  padding-right: 3rem;
+  padding-left: 3rem;
 }
 
+.header-logo{
+  padding: 4px;
+  height: 44px;
+}
 
 header .header-inner {
-  width: 100%;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+
 }
 
 header .header-inner .header-title {
@@ -85,24 +90,24 @@ header .navbar .navbar-container {
   margin-right: auto;
   margin-inline: auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
 }
 
 header .navbar-container .navbar-list {
   display: flex;
-  width: 90%;
+  width: 80%;
   padding: 0;
   margin: 0;
   text-align: center;
   justify-items: center;
-  justify-content: space-around;
+  gap: 2rem;
   align-items: center;
+  justify-content: flex-end;
 }
 
 header .navbar-container .navbar-list .navbar-item {
   box-sizing: border-box;
   display: inline-block;
-  width: 40%;
   line-height: 2rem;
   text-align: center;
   text-transform: uppercase;
@@ -138,8 +143,9 @@ header .hero {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(https://images.unsplash.com/photo-1477346611705-65d1883cee1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+  background-image: url(https://images.unsplash.com/photo-1506563805286-a52f937ec9ed?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
 }
+
 
 header .hero .hero-container {
   margin: 0 auto;
@@ -181,7 +187,7 @@ main .content-header .content-header-title {
   padding-top: 3rem;
   font-size: 1.5rem;
   text-align: center;
-  color: white
+  color: #2c3e50;
 }
 
 main .content-card {
@@ -192,8 +198,8 @@ main .content-card {
 
 /*footer*/
 footer {
-  background-color: #be1919;
-  color: white;
+  background-color: white;
+  color: #2c3e50;
   width:100%;
   text-align: center;
   padding: 20px;
